change title headings

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- Features Section -->
   <section class="features">
     <div class="section-container">
-      <h2 id="features-heading">Features</h2>
+      <h1 class="home-title" id="features-heading">Features</h1>
       <p class="section-description">Everything you need to enhance your cigar experience in one elegant app</p>
       <ul id="features-list">
         <li>
@@ -77,7 +77,7 @@
   <!-- Screenshots Section -->
   <section class="screenshots">
     <div class="section-container">
-      <h2 id="carousel-heading">Discover the App</h2>
+      <h1 class="home-title" id="carousel-heading">Discover the App</h1>
       <p class="section-description">Take a visual tour of Cigarrynos' elegant interface</p>
       <div class="screenshot-grid">
         <img src="assets/images/screenshot-1.png" alt="Collection Management">
@@ -97,7 +97,7 @@
   <!-- Download Section -->
   <section class="download">
     <div class="section-container">
-      <h2 id="download-heading">Get Started Today</h2>
+      <h1 class="home-title" id="download-heading">Get Started Today</h1>
       <p class="section-description">Available on iOS and Android platforms</p>
       <div class="store-buttons">
         <a href="https://play.google.com" class="btn">
