--- a/changelog.html
+++ b/changelog.html
@@ -27,21 +27,14 @@
 
   <div class="changelog-content">
     <div class="version">
-      <h3>1.2.4</h3>
+      <h3>0.9.38</h3>
       <ul>
-        <li>Improved analytics</li>
+        <li>Avoid duplicates</li>
+        <li>Display cigar names in review</li>
+        <li>Add strength in ratings</li>
       </ul>
     </div>
 
-    <div class="version">
-      <h3>1.2.3</h3>
-      <ul>
-        <li>Improved image preview</li>
-        <li>Updated screenshots</li>
-      </ul>
-    </div>
-
-    <!-- Additional versions... -->
   </div>
 </div>
 
