--- a/privacy.html
+++ b/privacy.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - Cigarrynos</title>
+  <meta name="description" content="Cigarrynos - Your Ultimate Cigar Companion App">
+  <title>privacy Policy - Cigarrynos</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+3:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Add favicon -->
+  <link rel="icon" type="image/svg+xml" href="assets/icons/app-icon.svg">
 </head>
 <body>
-
+<!-- Header Component -->
 <header>
   <div class="header-content">
     <div class="brand">
-      <a href="index.html" class="home-link app-icon"><img src="assets/icons/app-icon.svg" alt="App Icon" class="app-icon"></a>
+      <a href="index.html" class="home-link">
+        <img src="assets/icons/app-icon.svg" alt="Cigarrynos App Icon" class="app-icon" width="64" height="64">
+      </a>
       <h1>Cigarrynos</h1>
     </div>
     <p id="tagline">Your Ultimate Cigar Companion App</p>
@@ -22,46 +27,44 @@
   </div>
 </header>
 
-
 <!-- Language Selector -->
-<div class="language-links">
-  <a href="#" class="active" onclick="changeLang('en'); return false;">EN</a>
-  <span>|</span>
-  <a href="#" onclick="changeLang('fr'); return false;">FR</a>
-</div>
+<nav class="language-links" aria-label="Language selection">
+  <a href="#" class="active" onclick="updateContent('en'); return false;" aria-label="Switch to English">EN</a>
+  <span aria-hidden="true">|</span>
+  <a href="#" onclick="updateContent('fr'); return false;" aria-label="Switch to French">FR</a>
+</nav>
 
-<!-- Content Area -->
-<div id="content-area" class="legal-container"></div>
+<!-- Main Content Area -->
+<main id="content-area" class="legal-container">
+  <!-- Content will be loaded dynamically -->
+</main>
 
+<!-- Footer Component -->
 <footer>
   <div class="footer-content">
-    <!-- Creator credit with copyright -->
     <div class="footer-creator">
       <span id="footer-created-by">Made by</span> Said Eloudrhiri
       <span class="copyright">&copy; 2024, <a href="https://noratek.io">Noratek srl</a></span>
     </div>
 
-    <!-- Social links with inline SVGs -->
     <div class="social-links">
-      <a href="mailto:support@cigarrynos.com" aria-label="Email Support" title="Email Support">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <a href="mailto:support@cigarrynos.com" aria-label="Email Support">
+        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
           <polyline points="22,6 12,13 2,6"/>
         </svg>
       </a>
     </div>
 
-    <!-- Footer navigation -->
-    <div class="footer-nav">
+    <nav class="footer-nav" aria-label="Footer navigation">
       <a href="changelog.html" id="whats-new">What's New</a>
-      <a href="#" id="privacy-link">Privacy Policy</a>
+      <a href="privacy.html" id="privacy-link">Privacy Policy</a>
       <a href="terms.html" id="terms-link">Terms of Use</a>
-    </div>
+    </nav>
   </div>
 </footer>
 
-
-
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="js/app.js"></script>
 </body>
