--- a/index.html
+++ b/index.html
@@ -2,51 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Cigarrynos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Cigarrynos - Your Ultimate Cigar Companion App for tracking, rating, and discovering cigars">
+  <title>Cigarrynos - Your Ultimate Cigar Companion App</title>
+  <link rel="icon" type="image/svg+xml" href="assets/icons/app-icon.svg">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+3:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-
 <!-- Age Verification Modal -->
-<div id="age-verification" class="modal">
+<dialog id="age-verification" class="modal">
   <div class="modal-content">
     <h2>Age Verification</h2>
     <p id="age-message">You must be 18 years or older to enter this site.</p>
     <button id="btn-yes" class="btn">I am 18 or older</button>
     <button id="btn-no" class="btn btn-secondary">I am under 18</button>
   </div>
-</div>
+</dialog>
 
 <!-- Landing Page Content -->
 <header>
   <div class="header-content">
     <div class="brand">
-      <img src="assets/icons/app-icon.svg" alt="App Icon" class="app-icon">
+      <img src="assets/icons/app-icon.svg" alt="Cigarrynos Logo" class="app-icon" width="64" height="64">
       <h1>Cigarrynos</h1>
     </div>
     <p id="tagline">Your Ultimate Cigar Companion App</p>
     <p class="header-description">Experience the finest selection of cigars with our comprehensive companion app. Track, rate, and discover your perfect smoke.</p>
   </div>
-
 </header>
 
-
-
-<div class="language-links">
-  <a href="#" class="active" onclick="updateContent('en'); return false;">EN</a>
-  <span>|</span>
-  <a href="#" onclick="updateContent('fr'); return false;">FR</a>
-</div>
-
+<nav class="language-links" aria-label="Language selection">
+  <a href="#" class="active" onclick="updateContent('en'); return false;" aria-label="Switch to English">EN</a>
+  <span aria-hidden="true">|</span>
+  <a href="#" onclick="updateContent('fr'); return false;" aria-label="Switch to French">FR</a>
+</nav>
 
 <main>
   <!-- Features Section -->
-  <section class="features">
+  <section class="features" aria-labelledby="features-heading">
     <div class="section-container">
-      <h1 class="home-title" id="features-heading">Features</h1>
+      <h2 class="home-title" id="features-heading">Features</h2>
       <p class="section-description">Everything you need to enhance your cigar experience in one elegant app</p>
       <ul id="features-list">
         <li>
@@ -74,67 +72,63 @@
   </section>
 
   <!-- Screenshots Section -->
-  <section class="screenshots">
+  <section class="screenshots" aria-labelledby="carousel-heading">
     <div class="section-container">
-      <h1 class="home-title" id="carousel-heading">Discover the App</h1>
+      <h2 class="home-title" id="carousel-heading">Discover the App</h2>
       <p class="section-description">Take a visual tour of Cigarrynos' elegant interface</p>
       <div class="screenshot-grid">
-        <img src="assets/images/screenshot-1.png" alt="Collection Management">
-        <img src="assets/images/screenshot-2.png" alt="Tasting Notes">
-        <img src="assets/images/screenshot-3.png" alt="Cigar Details">
-        <img src="assets/images/screenshot-4.png" alt="Search Interface">
-        <img src="assets/images/screenshot-5.png" alt="Rating System">
-        <img src="assets/images/screenshot-6.png" alt="Rating System">
-        <img src="assets/images/screenshot-7.png" alt="Rating System">
-        <img src="assets/images/screenshot-8.png" alt="Rating System">
-        <img src="assets/images/screenshot-9.png" alt="Rating System">
-        <img src="assets/images/screenshot-10.png" alt="Rating System">
+        <img src="assets/images/screenshot-1.png" alt="Collection Management Interface" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-2.png" alt="Tasting Notes Interface" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-3.png" alt="Cigar Details View" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-4.png" alt="Search Interface" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-5.png" alt="Rating System Interface" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-6.png" alt="Humidor Management" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-7.png" alt="User Profile View" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-8.png" alt="Cigar Reviews Interface" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-9.png" alt="Statistics Dashboard" width="300" height="600" loading="lazy">
+        <img src="assets/images/screenshot-10.png" alt="Settings Interface" width="300" height="600" loading="lazy">
       </div>
     </div>
   </section>
 
   <!-- Download Section -->
-  <section class="download">
+  <section class="download" aria-labelledby="download-heading">
     <div class="section-container">
-      <h1 class="home-title" id="download-heading">Get Started Today</h1>
+      <h2 class="home-title" id="download-heading">Get Started Today</h2>
       <p class="section-description">Available on iOS and Android platforms</p>
       <div class="store-buttons">
-        <a href="https://play.google.com" class="btn">
-          <img src="assets/icons/playstore.png" alt="Google Play Store">
+        <a href="https://play.google.com" class="btn" aria-label="Get it on Google Play">
+          <img src="assets/icons/playstore.png" alt="Google Play Store" width="180" height="60">
         </a>
-        <a href="https://apps.apple.com" class="btn">
-          <img src="assets/icons/appstore.png" alt="Apple App Store">
+        <a href="https://apps.apple.com" class="btn" aria-label="Download on the App Store">
+          <img src="assets/icons/appstore.png" alt="Apple App Store" width="180" height="60">
         </a>
       </div>
     </div>
   </section>
 </main>
 
-<!-- Footer Section -->
 <footer>
   <div class="footer-content">
-    <!-- Creator credit with copyright -->
     <div class="footer-creator">
       <span id="footer-created-by">Made by</span> Said Eloudrhiri
       <span class="copyright">&copy; 2024, <a href="https://noratek.io">Noratek srl</a></span>
     </div>
 
-    <!-- Social links with inline SVGs -->
     <div class="social-links">
-      <a href="mailto:support@cigarrynos.com" aria-label="Email Support" title="Email Support">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <a href="mailto:support@cigarrynos.com" aria-label="Contact Support">
+        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
           <polyline points="22,6 12,13 2,6"/>
         </svg>
       </a>
     </div>
 
-    <!-- Footer navigation -->
-    <div class="footer-nav">
+    <nav class="footer-nav" aria-label="Footer navigation">
       <a href="changelog.html" id="whats-new">What's New</a>
       <a href="privacy.html" id="privacy-link">Privacy Policy</a>
       <a href="terms.html" id="terms-link">Terms of Use</a>
-    </div>
+    </nav>
   </div>
 </footer>
 
