--- a/restriction.html
+++ b/restriction.html
@@ -3,58 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Age Restriction Notice for Cigarrynos App">
   <title>Age Restriction - Cigarrynos</title>
-  <style>
-    body {
-      font-family: 'Source Sans 3', sans-serif;
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background-color: #f5f5f5;
-      text-align: center;
-    }
-    .container {
-      max-width: 600px;
-      padding: 2rem;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      margin: 1rem;
-    }
-    h1 {
-      font-family: 'Playfair Display', serif;
-      color: #333;
-      margin-bottom: 1rem;
-    }
-    p {
-      color: #666;
-      line-height: 1.6;
-      margin-bottom: 1.5rem;
-    }
-    .btn {
-      display: inline-block;
-      padding: 0.8rem 1.5rem;
-      background-color: #333;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-      transition: background-color 0.3s;
-    }
-    .btn:hover {
-      background-color: #555;
-    }
-  </style>
+  <link rel="icon" type="image/svg+xml" href="assets/icons/app-icon.svg">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+3:wght@400;600&display=swap" rel="stylesheet">
 </head>
-<body>
-<div class="container">
-  <h1>Age Restriction Notice</h1>
-  <p>We apologize, but access to Cigarrynos is restricted to individuals who are 18 years of age or older.</p>
-  <p>Thank you for your understanding.</p>
-  <a href="https://google.com" class="btn">Exit Site</a>
-</div>
+<body class="restriction-page">
+<header>
+  <div class="header-content">
+    <div class="brand">
+      <img src="assets/icons/app-icon.svg" alt="Cigarrynos Logo" class="app-icon" width="64" height="64">
+      <h1>Cigarrynos</h1>
+    </div>
+  </div>
+</header>
+
+<main class="restriction-container">
+  <div class="restriction-content">
+    <h2>Age Restriction Notice</h2>
+    <p>We apologize, but access to Cigarrynos is restricted to individuals who are 18 years of age or older.</p>
+    <p>Thank you for your understanding.</p>
+    <a href="https://google.com" class="btn btn-primary">Exit Site</a>
+  </div>
+</main>
+
+<footer>
+  <div class="footer-content">
+    <div class="footer-creator">
+      <span id="footer-created-by">Made by</span> Said Eloudrhiri
+      <span class="copyright">&copy; 2024, <a href="https://noratek.io">Noratek srl</a></span>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
