--- a/restriction.html
+++ b/restriction.html
@@ -8,10 +8,18 @@
   <link rel="icon" type="image/svg+xml" href="assets/icons/app-icon.svg">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <lin<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Age Restriction - Cigarrynos - Your Ultimate Cigar Companion App">
+  <title>Age Restriction - Cigarrynos</title>
+  <link rel="icon" type="image/svg+xml" href="assets/icons/app-icon.svg">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+3:wght@400;600&display=swap" rel="stylesheet">
 </head>
-<body class="restriction-page">
+<body>
 <header>
   <div class="header-content">
     <div class="brand">
@@ -21,22 +29,57 @@
   </div>
 </header>
 
-<main class="restriction-container">
-  <div class="restriction-content">
-    <h2>Age Restriction Notice</h2>
-    <p>We apologize, but access to Cigarrynos is restricted to individuals who are 18 years of age or older.</p>
-    <p>Thank you for your understanding.</p>
-    <a href="https://google.com" class="btn btn-primary">Exit Site</a>
+<nav class="language-links" aria-label="Language selection">
+  <a href="#" class="active" onclick="updateContent('en'); return false;" aria-label="Switch to English">EN</a>
+  <span aria-hidden="true">|</span>
+  <a href="#" onclick="updateContent('fr'); return false;" aria-label="Switch to French">FR</a>
+</nav>
+
+<main class="restriction-page">
+  <div class="section-container">
+    <div class="restriction-content">
+      <h1 data-i18n="restriction.pageTitle"></h1>
+      <p data-i18n="restriction.mainDescription"></p>
+
+      <h2 data-i18n="restriction.importantInfo.title"></h2>
+      <ul id="important-info-list">
+        <!-- Will be populated by JavaScript -->
+      </ul>
+
+      <h2 data-i18n="restriction.legalRequirements.title"></h2>
+      <p data-i18n="restriction.legalRequirements.intro"></p>
+      <ul id="legal-requirements-list">
+        <!-- Will be populated by JavaScript -->
+      </ul>
+
+      <p class="warning" data-i18n="restriction.warning"></p>
+    </div>
   </div>
 </main>
 
 <footer>
   <div class="footer-content">
     <div class="footer-creator">
-      <span id="footer-created-by">Made by</span> Said Eloudrhiri
+      <span id="footer-created-by" data-i18n="footer.createdBy"></span> Said Eloudrhiri
       <span class="copyright">&copy; 2024, <a href="https://noratek.io">Noratek srl</a></span>
     </div>
+
+    <div class="social-links">
+      <a href="mailto:support@cigarrynos.com" aria-label="Contact Support">
+        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+          <polyline points="22,6 12,13 2,6"/>
+        </svg>
+      </a>
+    </div>
+
+    <nav class="footer-nav" aria-label="Footer navigation">
+      <a href="changelog.html" id="whats-new" data-i18n="footer.whatsNew"></a>
+      <a href="privacy.html" id="privacy-link" data-i18n="footer.privacyPolicy"></a>
+      <a href="terms.html" id="terms-link" data-i18n="footer.termsOfUse"></a>
+    </nav>
   </div>
 </footer>
+<script src="./js/app.js"></script>
 </body>
 </html>
