New version for pre-publication

--- a/index.html
+++ b/index.html
@@ -111,21 +111,10 @@
 <footer>
   <div class="footer-content">
     <div class="footer-creator">
-      <span id="footer-created-by">Made by</span> Said Eloudrhiri
-      <span class="copyright">&copy; 2024, <a href="https://noratek.io">Noratek srl</a></span>
-    </div>
-
-    <div class="social-links">
-      <a href="mailto:support@cigarrynos.com" aria-label="Contact Support">
-        <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
-          <polyline points="22,6 12,13 2,6"/>
-        </svg>
-      </a>
+      <span class="copyright">&copy; 2024-2025, <a href="https://noratek.io">Noratek srl</a></span>
     </div>
 
     <nav class="footer-nav" aria-label="Footer navigation">
-      <a href="changelog.html" id="whats-new">What's New</a>
       <a href="privacy.html" id="privacy-link">Privacy Policy</a>
       <a href="terms.html" id="terms-link">Terms of Use</a>
     </nav>
