Align with App Stores

--- a/index.html
+++ b/index.html
@@ -41,52 +41,105 @@
 </nav>
 
 <main>
-  <!-- Features Section -->
-  <section class="features" aria-labelledby="features-heading">
+  <!-- Key Features Overview Section -->
+  <section class="key-features" aria-labelledby="key-features-heading">
     <div class="section-container">
-      <h2 class="home-title" id="features-heading">Features</h2>
-      <p class="section-description">Everything you need to enhance your cigar experience in one elegant app</p>
-      <ul id="features-list">
-        <li>
-          <h3>Comprehensive Database</h3>
-          <p>Browse through thousands of cigars with detailed information about origin, blend, and characteristics.</p>
-        </li>
-        <li>
-          <h3>Personal Collections</h3>
-          <p>Organize and track your cigar collection with ease. Keep inventory and manage your humidor digitally.</p>
-        </li>
-        <li>
-          <h3>Tasting Notes</h3>
-          <p>Record detailed tasting experiences, rate your cigars, and build your personal flavor profile.</p>
-        </li>
-        <li>
-          <h3>Offline Access</h3>
-          <p>Access your entire collection and notes anytime, anywhere - no internet connection required.</p>
-        </li>
-        <li>
-          <h3>Real-time Updates</h3>
-          <p>Stay current with the latest additions to our database and community reviews.</p>
-        </li>
-      </ul>
+      <h2 class="home-title" id="key-features-heading">Key Features</h2>
+      <p class="section-description" id="key-features-subtitle">Tools designed to help you discover, track, and share your cigar passion</p>
+      
+      <div class="features-grid">
+        <!-- Free Access -->
+        <div class="feature-card">
+          <h3 id="free-access-title">Free Access</h3>
+          <p id="free-access-desc">Browse the entire cigar database with detailed specifications, search and filter by brand, country, strength, and price—no account required.</p>
+        </div>
+
+        <!-- Premium Subscription -->
+        <div class="feature-card">
+          <h3 id="premium-access-title">Premium Subscription</h3>
+          <p id="premium-access-desc">Manage your personal humidor, wishlist, and favorites. Track collection value, export PDF reports, and access your data offline.</p>
+        </div>
+
+        <!-- Expert Tools -->
+        <div class="feature-card">
+          <h3 id="expert-access-title">Expert Tools</h3>
+          <p id="expert-access-desc">Help maintain database quality by approving new entries, merging duplicates, and contributing your expertise—invite only.</p>
+        </div>
+
+        <!-- Social Features -->
+        <div class="feature-card">
+          <h3 id="social-features-title">Social & Community</h3>
+          <p id="social-features-desc">Follow other enthusiasts, share reviews with detailed tasting notes, and exchange recommendations with the global community.</p>
+        </div>
+
+        <!-- Privacy First -->
+        <div class="feature-card">
+          <h3 id="privacy-features-title">Privacy-First Design</h3>
+          <p id="privacy-features-desc">Your data is yours. GDPR compliant with secure authentication, full data export options, and complete control over your information.</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- Screenshots Section -->
-  <section class="screenshots" aria-labelledby="carousel-heading">
+  <!-- Features Showcase Section -->
+  <section class="features-showcase" aria-labelledby="features-heading">
     <div class="section-container">
-      <h2 class="home-title" id="carousel-heading">Discover the App</h2>
-      <p class="section-description">Take a visual tour of Cigarrynos' elegant interface</p>
-      <div class="screenshot-grid">
-        <img src="assets/images/screenshot-1.png" alt="Collection Management Interface" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-2.png" alt="Tasting Notes Interface" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-3.png" alt="Cigar Details View" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-4.png" alt="Search Interface" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-5.png" alt="Rating System Interface" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-6.png" alt="Humidor Management" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-7.png" alt="User Profile View" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-8.png" alt="Cigar Reviews Interface" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-9.png" alt="Statistics Dashboard" width="300" height="600" loading="lazy">
-        <img src="assets/images/screenshot-10.png" alt="Settings Interface" width="300" height="600" loading="lazy">
+      <h2 class="home-title" id="features-heading">Experience Cigarrynos</h2>
+      <p class="section-description">Discover the features that make your cigar journey unforgettable</p>
+      
+      <!-- Feature 1: Dashboard & Journey -->
+      <div class="feature-row">
+        <div class="feature-image">
+          <img src="assets/images/IMG_0DAA34A73DFA-1.jpeg" alt="Dashboard showing Top Cigars, My Journey, Recent Activities and Social features" loading="lazy">
+        </div>
+        <div class="feature-content">
+          <h3 id="feature-1-title">Personal Dashboard</h3>
+          <p id="feature-1-desc">Track your cigar journey with personalized insights including top-rated cigars, recent activities, and social connections. Get a complete overview of your collection value and tasting history at a glance.</p>
+        </div>
+      </div>
+
+      <!-- Feature 2: Collection Management -->
+      <div class="feature-row feature-row-reverse">
+        <div class="feature-content">
+          <h3 id="feature-2-title">Collection Management</h3>
+          <p id="feature-2-desc">Organize your personal humidor, wishlist, and favorites with detailed inventory tracking. Monitor your collection's estimated value and manage multiple lists to perfectly curate your cigar experience.</p>
+        </div>
+        <div class="feature-image">
+          <img src="assets/images/IMG_158056B72B8D-1.jpeg" alt="Collection view showing Humidor, Favorites and Wishlist tabs with cigar details" loading="lazy">
+        </div>
+      </div>
+
+      <!-- Feature 3: Reviews & Ratings -->
+      <div class="feature-row">
+        <div class="feature-image">
+          <img src="assets/images/IMG_EFC5965EACC5-1.jpeg" alt="Review details with Aroma Radar showing flavor profiles" loading="lazy">
+        </div>
+        <div class="feature-content">
+          <h3 id="feature-3-title">Advanced Reviews & Aroma Radar</h3>
+          <p id="feature-3-desc">Create detailed reviews with our unique Aroma Radar to capture flavor profiles across multiple categories. Share your tasting notes and discover community ratings to find your next perfect smoke.</p>
+        </div>
+      </div>
+
+      <!-- Feature 4: Social Features -->
+      <div class="feature-row feature-row-reverse">
+        <div class="feature-content">
+          <h3 id="feature-4-title">Social Community</h3>
+          <p id="feature-4-desc">Connect with fellow enthusiasts, follow other collectors, and share your cigar journey. Exchange recommendations, comment on reviews, and build your network within the global cigar community.</p>
+        </div>
+        <div class="feature-image">
+          <img src="assets/images/IMG_C5FB8ED3DF8D-1.jpeg" alt="Dashboard Social section showing followed users and recent activities" loading="lazy">
+        </div>
+      </div>
+
+      <!-- Feature 5: Customization -->
+      <div class="feature-row">
+        <div class="feature-image">
+          <img src="assets/images/IMG_5BF3D99D442D-1.jpeg" alt="Settings screen with theme, language, and currency options" loading="lazy">
+        </div>
+        <div class="feature-content">
+          <h3 id="feature-5-title">Personalized Experience</h3>
+          <p id="feature-5-desc">Customize your app with multiple themes, language support, and local currency settings. Enjoy a tailored experience that adapts to your preferences with full offline access to your data.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -97,7 +150,7 @@
       <h2 class="home-title" id="download-heading">Get Started Today</h2>
       <p class="section-description">Available on iOS and Android platforms</p>
       <div class="store-buttons">
-        <a href="https://play.google.com" class="btn" aria-label="Get it on Google Play">
+        <a href="https://play.google.com/store/apps/details?id=app.cigarrynos" class="btn" aria-label="Get it on Google Play">
           <img src="assets/icons/playstore.png" alt="Google Play Store" width="180" height="60">
         </a>
         <a href="https://apps.apple.com" class="btn" aria-label="Download on the App Store">
