--- a/share/index.html
+++ b/share/index.html
@@ -8,7 +8,7 @@
 <h1>Cigarrynos</h1>
 <p>Access our complete catalogue of cigars with our mobile app!</p>
 <div style="margin: 20px;">
-  <a href="https://play.google.com/store/apps/details?id=com.cigarrynos"
+  <a href="https://play.google.com/store/apps/details?id=app.cigarrynos"
      style="display: inline-block; margin: 10px; padding: 10px 20px; background-color: #8B4513; color: white; text-decoration: none; border-radius: 5px;">
     Get it on Google Play
   </a>
