--- a/terms.html
+++ b/terms.html
@@ -13,12 +13,12 @@
   <link rel="icon" type="image/svg+xml" href="assets/icons/app-icon.svg">
 </head>
 <body>
-<!-- Header Component -->
+!-- Landing Page Content -->
 <header>
   <div class="header-content">
     <div class="brand">
       <a href="index.html" class="home-link">
-        <img src="assets/icons/app-icon.svg" alt="Cigarrynos App Icon" class="app-icon" width="64" height="64">
+        <img src="assets/icons/app-icon.svg" alt="Cigarrynos Logo" class="app-icon" width="64" height="64">
       </a>
       <h1>Cigarrynos</h1>
     </div>
@@ -27,7 +27,6 @@
   </div>
 </header>
 
-<!-- Language Selector -->
 <nav class="language-links" aria-label="Language selection">
   <a href="#" class="active" onclick="updateContent('en'); return false;" aria-label="Switch to English">EN</a>
   <span aria-hidden="true">|</span>
