--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/svg+xml" href="assets/icons/app-icon.svg">
 </head>
 <body>
-!-- Landing Page Content -->
+<!-- Landing Page Content -->
 <header>
   <div class="header-content">
     <div class="brand">
