--- a/terms.html
+++ b/terms.html
@@ -22,8 +22,8 @@
       </a>
       <h1>Cigarrynos</h1>
     </div>
-    <p id="tagline">Your Ultimate Cigar Companion App</p>
-    <p class="header-description">Experience the finest selection of cigars with our comprehensive companion app. Track, rate, and discover your perfect smoke.</p>
+    <p id="tagline">The Ultimate Cigar Companion</p>
+    <p id="header-description" class="header-description">Whether you're a casual smoker, a seasoned aficionado, or a certified expert, Cigarrynos offers the tools and community to elevate your cigar experience.</p>
   </div>
 </header>
 
