--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Feature 1: Dashboard & Journey -->
       <div class="feature-row">
         <div class="feature-image">
-          <img src="assets/images/IMG_0DAA34A73DFA-1.jpeg" alt="Dashboard showing Top Cigars, My Journey, Recent Activities and Social features" loading="lazy">
+          <img src="assets/images/1-en.png" alt="Dashboard showing Top Cigars, My Journey, Recent Activities and Social features" loading="lazy" data-lang-img="1">
         </div>
         <div class="feature-content">
           <h3 id="feature-1-title">Personal Dashboard</h3>
@@ -105,14 +105,14 @@
           <p id="feature-2-desc">Organize your personal humidor, wishlist, and favorites with detailed inventory tracking. Monitor your collection's estimated value and manage multiple lists to perfectly curate your cigar experience.</p>
         </div>
         <div class="feature-image">
-          <img src="assets/images/IMG_158056B72B8D-1.jpeg" alt="Collection view showing Humidor, Favorites and Wishlist tabs with cigar details" loading="lazy">
+          <img src="assets/images/2-en.png" alt="Collection view showing Humidor, Favorites and Wishlist tabs with cigar details" loading="lazy" data-lang-img="2">
         </div>
       </div>
 
       <!-- Feature 3: Reviews & Ratings -->
       <div class="feature-row">
         <div class="feature-image">
-          <img src="assets/images/IMG_EFC5965EACC5-1.jpeg" alt="Review details with Aroma Radar showing flavor profiles" loading="lazy">
+          <img src="assets/images/3-en.png" alt="Review details with Aroma Radar showing flavor profiles" loading="lazy" data-lang-img="3">
         </div>
         <div class="feature-content">
           <h3 id="feature-3-title">Advanced Reviews & Aroma Radar</h3>
@@ -127,14 +127,14 @@
           <p id="feature-4-desc">Connect with fellow enthusiasts, follow other collectors, and share your cigar journey. Exchange recommendations, comment on reviews, and build your network within the global cigar community.</p>
         </div>
         <div class="feature-image">
-          <img src="assets/images/IMG_C5FB8ED3DF8D-1.jpeg" alt="Dashboard Social section showing followed users and recent activities" loading="lazy">
+          <img src="assets/images/4-en.png" alt="Dashboard Social section showing followed users and recent activities" loading="lazy" data-lang-img="4">
         </div>
       </div>
 
       <!-- Feature 5: Customization -->
       <div class="feature-row">
         <div class="feature-image">
-          <img src="assets/images/IMG_5BF3D99D442D-1.jpeg" alt="Settings screen with theme, language, and currency options" loading="lazy">
+          <img src="assets/images/5-en.png" alt="Settings screen with theme, language, and currency options" loading="lazy" data-lang-img="5">
         </div>
         <div class="feature-content">
           <h3 id="feature-5-title">Personalized Experience</h3>
@@ -148,13 +148,19 @@
   <section class="download" aria-labelledby="download-heading">
     <div class="section-container">
       <h2 class="home-title" id="download-heading">Get Started Today</h2>
-      <p class="section-description">Available on iOS and Android platforms</p>
+      <p class="section-description">Available on Android and as a Web App for iOS</p>
       <div class="store-buttons">
         <a href="https://play.google.com/store/apps/details?id=app.cigarrynos" class="btn" aria-label="Get it on Google Play">
-          <img src="assets/icons/playstore.png" alt="Google Play Store" width="180" height="60">
+          <img src="assets/icons/playstore-en.png" alt="Google Play Store" width="180" height="60" data-lang-playstore="true">
         </a>
-        <a href="https://apps.apple.com" class="btn" aria-label="Download on the App Store">
-          <img src="assets/icons/appstore.png" alt="Apple App Store" width="180" height="60">
+        <a href="https://cigarrynos.app" class="btn" aria-label="Open Web App">
+          <div style="display: inline-flex; width: 180px; height: 53px; background: #000000; border-radius: 6px; align-items: center; padding: 0 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.3); gap: 8px;">
+            <img src="assets/icons/logo.png" alt="Cigarrynos" style="width: 40px; height: 40px; object-fit: contain;">
+            <div style="flex: 1;">
+              <div style="color: white; font-size: 10px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 400; line-height: 1; margin-bottom: 2px; opacity: 0.9;" id="webapp-button-prefix">OPEN IT ON</div>
+              <div style="color: white; font-size: 16px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 500; line-height: 1.1;" id="webapp-button-text">Web App</div>
+            </div>
+          </div>
         </a>
       </div>
     </div>
