--- a/share/index.html
+++ b/share/index.html
@@ -12,9 +12,15 @@
      style="display: inline-block; margin: 10px; padding: 10px 20px; background-color: #8B4513; color: white; text-decoration: none; border-radius: 5px;">
     Get it on Google Play
   </a>
-  <a href="https://apps.apple.com/app/cigarrynos/YOUR_APP_ID"
-     style="display: inline-block; margin: 10px; padding: 10px 20px; background-color: #8B4513; color: white; text-decoration: none; border-radius: 5px;">
-    Download on App Store
+  <a href="https://cigarrynos.app"
+     style="display: inline-block; margin: 10px; text-decoration: none;">
+    <div style="display: inline-flex; min-width: 180px; height: 50px; background: #000000; border-radius: 5px; align-items: center; padding: 0 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.3); gap: 6px;">
+      <img src="../assets/icons/logo.png" alt="Cigarrynos" style="width: 40px; height: 40px; object-fit: contain;">
+      <div style="flex: 1;">
+        <div style="color: white; font-size: 9px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 400; line-height: 1; margin-bottom: 2px; opacity: 0.9;">OPEN IT ON</div>
+        <div style="color: white; font-size: 14px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 500; line-height: 1;">Web App</div>
+      </div>
+    </div>
   </a>
 </div>
 </body>
