--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   </section>
 
   <!-- Download Section -->
-  <section class="download" aria-labelledby="download-heading">
+  <section id="download" class="download" aria-labelledby="download-heading">
     <div class="section-container">
       <h2 class="home-title" id="download-heading">Get Started Today</h2>
       <p class="section-description">Available on Android and as a Web App for iOS</p>
@@ -154,11 +154,11 @@
           <img src="assets/icons/playstore-en.png" alt="Google Play Store" width="180" height="60" data-lang-playstore="true">
         </a>
         <a href="https://cigarrynos.app" class="btn" aria-label="Open Web App">
-          <div style="display: inline-flex; width: 180px; height: 53px; background: #000000; border-radius: 6px; align-items: center; padding: 0 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.3); gap: 8px;">
-            <img src="assets/icons/logo.png" alt="Cigarrynos" style="width: 40px; height: 40px; object-fit: contain;">
+          <div style="display: inline-flex; width: 180px; height: 60px; background: #000000; border-radius: 6px; align-items: center; padding: 0 12px; gap: 10px;">
+            <img src="assets/icons/logo.png" alt="Cigarrynos" style="width: 36px; height: 36px; object-fit: contain;">
             <div style="flex: 1;">
-              <div style="color: white; font-size: 10px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 400; line-height: 1; margin-bottom: 2px; opacity: 0.9;" id="webapp-button-prefix">OPEN IT ON</div>
-              <div style="color: white; font-size: 16px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 500; line-height: 1.1;" id="webapp-button-text">Web App</div>
+              <div style="color: white; font-size: 10px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 400; line-height: 1; margin-bottom: 3px; opacity: 0.9;" id="webapp-button-prefix">OPEN IT ON</div>
+              <div style="color: white; font-size: 18px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 500; line-height: 1.1;" id="webapp-button-text">Web App</div>
             </div>
           </div>
         </a>
