change position image

--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
         <a href="https://play.google.com/store/apps/details?id=app.cigarrynos" class="btn" aria-label="Get it on Google Play">
           <img src="assets/icons/playstore-en.png" alt="Google Play Store" width="180" height="60" data-lang-playstore="true">
         </a>
-        <a href="https://cigarrynos.app" class="btn" aria-label="Open Web App">
-          <div style="display: inline-flex; width: 180px; height: 60px; background: #000000; border-radius: 6px; align-items: center; padding: 0 12px; gap: 10px;">
-            <img src="assets/icons/logo.png" alt="Cigarrynos" style="width: 36px; height: 36px; object-fit: contain;">
+        <a href="https://cigarrynos.app" class="btn" aria-label="Open Web App" style="display: inline-block; text-decoration: none;">
+          <div style="display: flex; width: 180px; height: 60px; background: #000000; border-radius: 8px; align-items: center; padding: 0 16px; box-sizing: border-box;">
+            <img src="assets/icons/logo.png" alt="Cigarrynos" style="width: 32px; height: 32px; object-fit: contain; margin-right: 12px;">
             <div style="flex: 1;">
-              <div style="color: white; font-size: 10px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 400; line-height: 1; margin-bottom: 3px; opacity: 0.9;" id="webapp-button-prefix">OPEN IT ON</div>
-              <div style="color: white; font-size: 18px; font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif; font-weight: 500; line-height: 1.1;" id="webapp-button-text">Web App</div>
+              <div style="color: white; font-size: 11px; font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: 400; line-height: 1; margin-bottom: 2px; text-transform: uppercase; letter-spacing: 0.5px;" id="webapp-button-prefix">OPEN IT ON</div>
+              <div style="color: white; font-size: 20px; font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: 500; line-height: 1;" id="webapp-button-text">Web App</div>
             </div>
           </div>
         </a>
